--- a/src/eduid_webapp/support/templates/index.html
+++ b/src/eduid_webapp/support/templates/index.html
@@ -12,7 +12,7 @@
         <form role="form" action="/" method="POST">
             <div class="form-group">
                 <p><input type=text name=query class="form-control" placeholder="Enter search term">
-                <p><button type="submit" value="Submit" class="btn btn-default">Submit</button>
+                <p><button type="submit" value="Submit" class="btn btn-primary">Submit</button>
             </div>
         </form>
         {% if error %}
@@ -20,6 +20,7 @@
         {% endif %}
 
         {% if users %}
+            <hr />
             <h3>{{users|length}} user{% if users|length > 1 %}s were{% else %} was{% endif %} found using query "{{ search_query }}":</h3>
             {% import 'common_user_table_data.html' as common_user_table %}
             {% for item in users %}
