--- a/src/eduid_webapp/support/templates/common_user_table_data.html
+++ b/src/eduid_webapp/support/templates/common_user_table_data.html
@@ -20,9 +20,9 @@
         <td>
             {% for nin in user_dict.nins %}
                 <dl>
-                    <dt>Number</dt><dd>{{ nin['number'] }}</dd>
-                    <dt>Primary</dt><dd>{{ nin['primary'] }}</dd>
-                    <dt>Verified</dt><dd>{{ nin['verified'] }}</dd>
+                    <dt>Number</dt><dd>{{ nin.get('number') }}</dd>
+                    <dt>Primary</dt><dd>{{ nin.get('primary') }}</dd>
+                    <dt>Verified</dt><dd>{{ nin.get('verified') }}</dd>
                 </dl>
             {% endfor %}
         </td>
@@ -32,15 +32,15 @@
         <td>
             {% for mail in user_dict.mailAliases %}
                 <dl>
-                    <dt>Address</dt><dd>{{ mail['email'] }}</dd>
-                    <dt>Primary</dt><dd>{{ mail['primary'] }}</dd>
-                    <dt>Verified</dt><dd>{{ mail['verified'] }}</dd>
-                    {% if mail['created_by'] %}
-                        <dt>Added using</dt><dd>{{ mail['created_by'] }}</dd>
+                    <dt>Address</dt><dd>{{ mail.get('email') }}</dd>
+                    <dt>Primary</dt><dd>{{ mail.get('primary') }}</dd>
+                    <dt>Verified</dt><dd>{{ mail.get('verified') }}</dd>
+                    {% if mail.get('created_by') %}
+                        <dt>Added using</dt><dd>{{ mail.get('created_by') }}</dd>
                     {% endif %}
-                    <dt>Added timestamp</dt><dd>{{ mail['created_ts']|datetimeformat }}</dd>
-                    {% if  mail['verified_ts'] %}
-                        <dt>Verified timestamp</dt><dd>{{ mail['verified_ts']|datetimeformat }}</dd>
+                    <dt>Added timestamp</dt><dd>{{ mail.get('created_ts')|datetimeformat }}</dd>
+                    {% if  mail.get('verified_ts') %}
+                        <dt>Verified timestamp</dt><dd>{{ mail.get('verified_ts')|datetimeformat }}</dd>
                     {% endif %}
                 </dl>
             {% endfor %}
@@ -51,10 +51,10 @@
         <td>
             {% for phone in user_dict.phone %}
                 <dl>
-                    <dt>Number</dt><dd>{{ phone['number'] }}</dd>
-                    <dt>Primary</dt><dd>{{ phone['primary'] }}</dd>
-                    <dt>Verified</dt><dd>{{ phone['verified'] }}</dd>
-                    <dt>Added timestamp</dt><dd>{{ phone['created_ts']|datetimeformat }}</dd>
+                    <dt>Number</dt><dd>{{ phone.get('number') }}</dd>
+                    <dt>Primary</dt><dd>{{ phone.get('primary') }}</dd>
+                    <dt>Verified</dt><dd>{{ phone.get('verified') }}</dd>
+                    <dt>Added timestamp</dt><dd>{{ phone.get('created_ts')|datetimeformat }}</dd>
                 </dl>
             {% endfor %}
         </td>
@@ -64,8 +64,8 @@
         <td>
             {% for password in user_dict.passwords %}
                 <dl>
-                    <dt>Added using</dt><dd>{{ password['created_by'] }}</dd>
-                    <dt>Added timestamp</dt><dd>{{ password['created_ts']|datetimeformat }}</dd>
+                    <dt>Added using</dt><dd>{{ password.get('created_by') }}</dd>
+                    <dt>Added timestamp</dt><dd>{{ password.get('created_ts')|datetimeformat }}</dd>
                 </dl>
             {% endfor %}
         </td>
