--- a/src/eduid_webapp/support/templates/index.html
+++ b/src/eduid_webapp/support/templates/index.html
@@ -18,7 +18,7 @@
         {% if error %}
             <h3>{{ error }}</h3>
         {% endif %}
-
+    
         {% if users %}
             <hr />
             <h3>{{users|length}} user{% if users|length > 1 %}s were{% else %} was{% endif %} found using query "{{ search_query }}":</h3>
@@ -78,15 +78,15 @@
                                             <th>Pending mail address</th>
                                             <td>
                                                 <dl>
-                                                    <dt>Address</dt><dd>{{ item.signup_user.pending_mail_address['email'] }}</dd>
-                                                    <dt>Primary</dt><dd>{{ item.signup_user.pending_mail_address['primary'] }}</dd>
-                                                    <dt>Verified</dt><dd>{{ item.signup_user.pending_mail_address['verified'] }}</dd>
-                                                    {% if item.signup_user.pending_mail_address['created_by'] %}
-                                                        <dt>Added using</dt><dd>{{ item.signup_user.pending_mail_address['created_by'] }}</dd>
+                                                    <dt>Address</dt><dd>{{ item.signup_user.pending_mail_address.get('email') }}</dd>
+                                                    <dt>Primary</dt><dd>{{ item.signup_user.pending_mail_address.get('primary') }}</dd>
+                                                    <dt>Verified</dt><dd>{{ item.signup_user.pending_mail_address.get('verified') }}</dd>
+                                                    {% if item.signup_user.pending_mail_address.get('created_by') %}
+                                                        <dt>Added using</dt><dd>{{ item.signup_user.pending_mail_address.get('created_by') }}</dd>
                                                     {% endif %}
-                                                    <dt>Added timestamp</dt><dd>{{ item.signup_user.pending_mail_address['created_ts']|datetimeformat }}</dd>
-                                                    {% if  item.signup_user.pending_mail_address['verified_ts'] %}
-                                                        <dt>Verified timestamp</dt><dd>{{ item.signup_user.pending_mail_address['verified_ts']|datetimeformat }}</dd>
+                                                    <dt>Added timestamp</dt><dd>{{ item.signup_user.pending_mail_address.get('created_ts')|datetimeformat }}</dd>
+                                                    {% if  item.signup_user.pending_mail_address.get('verified_ts') %}
+                                                        <dt>Verified timestamp</dt><dd>{{ item.signup_user.pending_mail_address.get('verified_ts')|datetimeformat }}</dd>
                                                     {% endif %}
                                                 </dl>
                                             </td>
