--- a/src/eduid_webapp/support/templates/index.html
+++ b/src/eduid_webapp/support/templates/index.html
@@ -223,7 +223,7 @@
                 {% endfor %}
         {% endif %}
     </div>
-    <script src="{{ static_url_for(js/libs/jquery-2.0.3.min.js') }}"></script>
-    <script src="{{ static_url_for(js/libs/bootstrap-3.2.0.min.js') }}"></script>
+    <script src="{{ static_url_for('js/libs/jquery-2.0.3.min.js') }}"></script>
+    <script src="{{ static_url_for('js/libs/bootstrap-3.2.0.min.js') }}"></script>
 </body>
 </html>
