--- a/src/eduid_webapp/security/views/templates/reset_password_email.jinja2
+++ b/src/eduid_webapp/security/views/templates/reset_password_email.jinja2
@@ -5,30 +5,34 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <h2>{{ form_context.heading }}</h2>
-        {% if form_context.text %}
-            <p><span class="glyphicon glyphicon-info-sign"></span> {{ form_context.text }}</p>
+        <h2>{{ view_context.heading }}</h2>
+        {% if view_context.text %}
+            <p><span class="glyphicon glyphicon-info-sign"></span> {{ view_context.text }}</p>
         {% endif %}
     </div>
     <div class="row">
-        <form class="form" method="post" action="{{ form_context.action }}">
-            <input type="hidden" id="csrf" name="csrf" value="{{ form_context.csrf_token }}">
-            <div class="form-group {% if form_context.errors %}has-error{% endif %}">
-                <div>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="{% trans %}Email address{% endtrans %}">
+        {% if not view_context.form_post_success %}
+            <form class="form" method="post" action="{{ view_context.action }}">
+                <input type="hidden" id="csrf" name="csrf" value="{{ view_context.csrf_token }}">
+                <div class="form-group {% if view_context.errors %}has-error{% endif %}">
+                    <div>
+                        <input type="email" class="form-control" id="email" name="email" placeholder="{% trans %}Email address{% endtrans %}">
+                    </div>
+                    {% if view_context.errors %}
+                        {% for key, value in view_context.errors.items() %}
+                            <span id="helpblock" class="help-block">{{ value[0] }}</span>
+                        {% endfor %}
+                    {% endif %}
                 </div>
-                {% if form_context.errors %}
-                    {% for key, value in form_context.errors.items() %}
-                        <span id="helpblock" class="help-block">{{ value[0] }}</span>
-                    {% endfor %}
-                {% endif %}
-            </div>
-            <div class="form-group">
-                <div>
-                    <button type="submit" class="btn btn-default">{% trans %}Reset password{% endtrans %}</button>
+                <div class="form-group">
+                    <div>
+                        <button type="submit" class="btn btn-default">{% trans %}Reset password{% endtrans %}</button>
+                    </div>
                 </div>
-            </div>
-        </form>
+            </form>
+        {% else %}
+            <p>{{ view_context.form_post_success_msg }}</p>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
