close translation tag

--- a/src/eduid_webapp/security/views/templates/register_token.html
+++ b/src/eduid_webapp/security/views/templates/register_token.html
@@ -21,7 +21,7 @@
         <div id="no-data" class="collapse">
             <div class="center-block">
                 <p>{% trans %}Error: Got no data from the backend{% endtrans %}</p>
-                <a href="/">{% trans %}Back</a>
+                <a href="/">{% trans %}Back{% endtrans %}</a>
             </div>
         </div>
             <div id="u2f-error" class="collapse">
