--- a/src/eduid_webapp/security/views/templates/reset_password_extra_security.jinja2
+++ b/src/eduid_webapp/security/views/templates/reset_password_extra_security.jinja2
@@ -21,7 +21,7 @@
                 <div class="row">
                     <form class="form" method="post" action="{{ view_context.action }}">
                         <input type="hidden" id="csrf" name="csrf" value="{{ view_context.csrf_token }}">
-                        <input type="hidden" id="phone_number_{{loop.index}}" name="phone_number" value="{{ number }}">
+                        <input type="hidden" id="phone_number_{{loop.index0}}" name="phone_number_index" value="{{loop.index0}}">
                         <div class="form-group">
                             <div>
                                 <button type="submit" class="btn btn-default">{% trans %}Send SMS to number{% endtrans %} {{ number }}</button>
