--- a/src/eduid_webapp/security/views/templates/reset_password_verify_phone.jinja2
+++ b/src/eduid_webapp/security/views/templates/reset_password_verify_phone.jinja2
@@ -1,9 +1,8 @@
 {% extends "base.jinja2" %}
 
-{% block title %}{% trans %}Reset password - Email{% endtrans %}{% endblock %}
+{% block title %}{% trans %}Reset password - Verify phone number{% endtrans %}{% endblock %}
 
 {% block content %}
-<div class="container">
     <div class="row">
         <h2>{{ view_context.heading }}</h2>
         {% if view_context.text %}
@@ -16,7 +15,7 @@
                 <input type="hidden" id="csrf" name="csrf" value="{{ view_context.csrf_token }}">
                 <div class="form-group {% if view_context.errors %}has-error{% endif %}">
                     <div>
-                        <input type="email" class="form-control" id="email" name="email" placeholder="{% trans %}Email address{% endtrans %}">
+                        <input type="text" class="form-control" id="phone_code" name="phone_code" placeholder="{% trans %}SMS code{% endtrans %}">
                     </div>
                     {% if view_context.errors %}
                         {% for key, value in view_context.errors.items() %}
@@ -26,7 +25,7 @@
                 </div>
                 <div class="form-group">
                     <div>
-                        <button type="submit" class="btn btn-default">{% trans %}Reset password{% endtrans %}</button>
+                        <button type="submit" class="btn btn-default">{% trans %}Verify phone number{% endtrans %}</button>
                     </div>
                 </div>
             </form>
@@ -34,5 +33,4 @@
             <p>{{ view_context.form_post_success_msg }}</p>
         {% endif %}
     </div>
-</div>
 {% endblock %}
