--- a/src/eduid_webapp/security/views/templates/error.jinja2
+++ b/src/eduid_webapp/security/views/templates/error.jinja2
@@ -3,12 +3,15 @@
 {% block title %}{% trans %}Error{% endtrans %}{% endblock %}
 
 {% block content %}
-<div class="container">
     <div class="row">
         <h2>{{ view_context.heading }}</h2>
         {% if view_context.text %}
             <p><span class="glyphicon glyphicon-info-sign"></span> {{ view_context.text }}</p>
         {% endif %}
+        {% if view_context.retry_url and retry_url_txt %}
+            <div >
+                <a href="{{ view_context.retry_url }}">{{ view_context.retry_url_txt }}</a>
+            </div>
+        {% endif %}
     </div>
-</div>
 {% endblock %}
