--- a/src/eduid_webapp/security/views/templates/reset_password_verify_phone.jinja2
+++ b/src/eduid_webapp/security/views/templates/reset_password_verify_phone.jinja2
@@ -10,27 +10,29 @@
         {% endif %}
     </div>
     <div class="row">
-        {% if not view_context.form_post_success %}
-            <form class="form" method="post" action="{{ view_context.action }}">
-                <input type="hidden" id="csrf" name="csrf" value="{{ view_context.csrf_token }}">
-                <div class="form-group {% if view_context.errors %}has-error{% endif %}">
-                    <div>
-                        <input type="text" class="form-control" id="phone_code" name="phone_code" placeholder="{% trans %}SMS code{% endtrans %}">
-                    </div>
-                    {% if view_context.errors %}
-                        {% for key, value in view_context.errors.items() %}
-                            <span id="helpblock" class="help-block">{{ value[0] }}</span>
-                        {% endfor %}
-                    {% endif %}
+        <form class="form" method="post" action="{{ view_context.action }}">
+            <input type="hidden" id="csrf" name="csrf" value="{{ view_context.csrf_token }}">
+            <div class="form-group {% if view_context.errors or view_context.form_post_fail_msg %}has-error{% endif %}">
+                <div>
+                    <input type="text" class="form-control" id="phone_code" name="phone_code" placeholder="{% trans %}SMS code{% endtrans %}">
                 </div>
-                <div class="form-group">
-                    <div>
-                        <button type="submit" class="btn btn-default">{% trans %}Verify phone number{% endtrans %}</button>
-                    </div>
+                {% if view_context.errors %}
+                    {% for key, value in view_context.errors.items() %}
+                        <span id="helpblock" class="help-block">{{ value[0] }}</span>
+                    {% endfor %}
+                {% endif %}
+                {% if view_context.form_post_fail_msg %}
+                    <span id="helpblock" class="help-block">{{ view_context.form_post_fail_msg }}</span>
+                {% endif %}
+            </div>
+            <div class="form-group">
+                <div>
+                    <button type="submit" class="btn btn-default">{% trans %}Verify phone number{% endtrans %}</button>
                 </div>
-            </form>
-        {% else %}
-            <p>{{ view_context.form_post_success_msg }}</p>
-        {% endif %}
+            </div>
+            <div >
+                <a href="{{ view_context.retry_url }}">{{ view_context.retry_url_txt }}</a>
+            </div>
+        </form>
     </div>
 {% endblock %}
