Reset password views ready for review

--- a/src/eduid_webapp/security/views/templates/reset_password_new_password.jinja2
+++ b/src/eduid_webapp/security/views/templates/reset_password_new_password.jinja2
@@ -1,13 +1,13 @@
 {% extends "base.jinja2" %}
 
 {% block content %}
-    <div class="row">
-        <h2>{{ view_context.heading }}</h2>
-        {% if view_context.text %}
-            <p><span class="glyphicon glyphicon-info-sign"></span> {{ view_context.text }}</p>
-        {% endif %}
-    </div>
     {% if not view_context.form_post_success %}
+        <div class="row">
+            <h2>{{ view_context.heading }}</h2>
+            {% if view_context.text %}
+                <p><span class="glyphicon glyphicon-info-sign"></span> {{ view_context.text }}</p>
+            {% endif %}
+        </div>
         <div class="row">
 
             <!-- Nav tabs -->
@@ -88,7 +88,7 @@
         </div>
     {% else %}
         <div class="row">
-            {% trans %}
+            {% trans login_url=view_context.login_url%}
                 <p>Password has been updated successfully.</p>
                 <p><a href="{{ login_url }}">Return to login page</a></p>
             {% endtrans %}
