Use boolean instead of string match

--- a/src/eduid_webapp/security/views/templates/reset_password_extra_security.jinja2
+++ b/src/eduid_webapp/security/views/templates/reset_password_extra_security.jinja2
@@ -34,7 +34,7 @@
 <div class="row">
     <form class="form" method="post" action="{{ view_context.action }}">
         <input type="hidden" id="csrf" name="csrf" value="{{ view_context.csrf_token }}">
-        <input type="hidden" id="no_extra_security" name="no_extra_security" value="no_extra_security">
+        <input type="hidden" id="no_extra_security" name="no_extra_security" value="true">
         <div class="form-group">
             <div>
                 <button type="submit" class="btn btn-link">{% trans %}Continue with no extra security. I understand that I will have to verify my account again.{% endtrans %}</button>
