Updating the support app for new backend

--- a/src/eduid_webapp/support/templates/common_user_table_data.html
+++ b/src/eduid_webapp/support/templates/common_user_table_data.html
@@ -64,6 +64,7 @@
         <td>
             {% for credential in user_dict.passwords %}
                 <dl>
+                    <dt>Type</dt><dd>{{ credential.get('type') }}</dd>
                     <dt>Added using</dt><dd>{{ credential.get('created_by') }}</dd>
                     <dt>Added timestamp</dt><dd>{{ credential.get('created_ts')|datetimeformat }}</dd>
                 </dl>
