Use user objects to look up aux data

--- a/src/eduid_webapp/support/templates/common_user_table_data.html
+++ b/src/eduid_webapp/support/templates/common_user_table_data.html
@@ -65,6 +65,7 @@
             {% for credential in user_dict.passwords %}
                 <dl>
                     <dt>Type</dt><dd>{{ credential.get('type') }}</dd>
+                    <dt>Last used successfully</dt><dd>{{ credential.get('success_ts')|datetimeformat }}</dd>
                     <dt>Added using</dt><dd>{{ credential.get('created_by') }}</dd>
                     <dt>Added timestamp</dt><dd>{{ credential.get('created_ts')|datetimeformat }}</dd>
                 </dl>
