--- a/src/eduid_webapp/support/templates/index.html
+++ b/src/eduid_webapp/support/templates/index.html
@@ -247,6 +247,7 @@
                                 {% endif %}
                             </table>
                         </div>
+                        <!-- Do not show until we clean up abandoned mfa actions
                         <div class="col-md-6">
                             <table class="table table-hover">
                                 <caption>Uncompleted user actions</caption>
@@ -260,8 +261,9 @@
                                     <tr><td>No data</td></tr>
                                 {% endif %}
                             </table>
+                        </div>
+                        -->
                     </div>
-                </div>
                 {% endfor %}
         {% endif %}
     </div>
