--- a/src/eduid_webapp/support/templates/common_user_table_data.html
+++ b/src/eduid_webapp/support/templates/common_user_table_data.html
@@ -18,11 +18,18 @@
     <tr>
         <th>National identity numbers:</th>
         <td>
-            {% for nin in user_dict.nins %}
+            {% for nin in user_dict.nins|sort(attribute='created_ts', reverse=True)|sort(attribute='verified', reverse=True) %}
                 <dl>
                     <dt>Number</dt><dd>{{ nin.get('number') }}</dd>
                     <dt>Primary</dt><dd>{{ nin.get('primary') }}</dd>
                     <dt>Verified</dt><dd>{{ nin.get('verified') }}</dd>
+                    <dt>Added timestamp</dt><dd>{{ nin.get('created_ts')|datetimeformat }}</dd>
+                    {% if nin.get('verified_by') %}
+                        <dt>Verified using</dt><dd>{{ nin.get('verified_by') }}</dd>
+                    {% endif %}
+                    {% if  nin.get('verified_ts') %}
+                        <dt>Verified timestamp</dt><dd>{{ nin.get('verified_ts')|datetimeformat }}</dd>
+                    {% endif %}
                 </dl>
             {% endfor %}
         </td>
@@ -30,7 +37,7 @@
     <tr>
         <th>Mail addresses:</th>
         <td>
-            {% for mail in user_dict.mailAliases %}
+            {% for mail in user_dict.mailAliases|sort(attribute='created_ts', reverse=True)|sort(attribute='verified', reverse=True) %}
                 <dl>
                     <dt>Address</dt><dd>{{ mail.get('email') }}</dd>
                     <dt>Primary</dt><dd>{{ mail.get('primary') }}</dd>
@@ -39,7 +46,7 @@
                         <dt>Added using</dt><dd>{{ mail.get('created_by') }}</dd>
                     {% endif %}
                     <dt>Added timestamp</dt><dd>{{ mail.get('created_ts')|datetimeformat }}</dd>
-                    {% if  mail.get('verified_ts') %}
+                    {% if mail.get('verified_ts') %}
                         <dt>Verified timestamp</dt><dd>{{ mail.get('verified_ts')|datetimeformat }}</dd>
                     {% endif %}
                 </dl>
@@ -49,12 +56,15 @@
     <tr>
         <th>Phone numbers:</th>
         <td>
-            {% for phone in user_dict.phone %}
+            {% for phone in user_dict.phone|sort(attribute='created_ts', reverse=True)|sort(attribute='verified', reverse=True) %}
                 <dl>
                     <dt>Number</dt><dd>{{ phone.get('number') }}</dd>
                     <dt>Primary</dt><dd>{{ phone.get('primary') }}</dd>
                     <dt>Verified</dt><dd>{{ phone.get('verified') }}</dd>
                     <dt>Added timestamp</dt><dd>{{ phone.get('created_ts')|datetimeformat }}</dd>
+                    {% if phone.get('verified_ts') %}
+                        <dt>Verified timestamp</dt><dd>{{ phone.get('verified_ts')|datetimeformat }}</dd>
+                    {% endif %}
                 </dl>
             {% endfor %}
         </td>
@@ -62,7 +72,7 @@
     <tr>
         <th>Credentials:</th>
         <td>
-            {% for credential in user_dict.passwords %}
+            {% for credential in user_dict.passwords|sort(attribute='created_ts', reverse=True) %}
                 <dl>
                     <dt>Type</dt><dd>{{ credential.get('type') }}</dd>
                     <dt>Last used successfully</dt><dd>{{ credential.get('success_ts')|datetimeformat }}</dd>
@@ -75,7 +85,7 @@
     <tr>
         <th>Accepted terms of use:</th>
         <td>
-            {% for tou in user_dict.tou %}
+            {% for tou in user_dict.tou|sort(attribute='created_ts', reverse=True) %}
                 <dl>
                     <dt>Version</dt><dd>{{ tou.get('version') }}</dd>
                     <dt>Added using</dt><dd>{{ tou.get('created_by') }}</dd>
