--- a/src/eduid_webapp/actions/templates/index.html
+++ b/src/eduid_webapp/actions/templates/index.html
@@ -37,7 +37,7 @@
                     }
                 });
                 req.open('GET', url);
-                req.responseType = 'application/json');
+                req.responseType = 'application/json';
                 req.send();
             }
         }
